--- a/WEB/commande/command.html
+++ b/WEB/commande/command.html
@@ -1,32 +1,20 @@
-verify that : len(parameters)==3
-verify that : b"signature" in parameters 
-verify that : sign(b"&".join(url.split(b"&")[:-1]))==parameters[b"signature"].decode()
-define : ROBOT ; int(parameters[b"robot"].decode())
-define : VOYAGE ; int(parameters[b"voyage"].decode())
-define : LIEN1 ; "http://"+ip_srv+"/suivi.html?robot=ROBOT&voyage=VOYAGE&boisson=1&signature="+sign(b"/suivi.html?robot=ROBOT&voyage=VOYAGE&boisson=1")
-define : LIEN2 ; "http://"+ip_srv+"/suivi.html?robot=ROBOT&voyage=VOYAGE&boisson=2&signature="+sign(b"/suivi.html?robot=ROBOT&voyage=VOYAGE&boisson=2")
-define : LIEN3 ; "http://"+ip_srv+"/suivi.html?robot=ROBOT&voyage=VOYAGE&boisson=3&signature="+sign(b"/suivi.html?robot=ROBOT&voyage=VOYAGE&boisson=3")
-define : LIEN4 ; "http://"+ip_srv+"/suivi.html?robot=ROBOT&voyage=VOYAGE&boisson=4&signature="+sign(b"/suivi.html?robot=ROBOT&voyage=VOYAGE&boisson=4")
-define : LIEN5 ; "http://"+ip_srv+"/suivi.html?robot=ROBOT&voyage=VOYAGE&boisson=5&signature="+sign(b"/suivi.html?robot=ROBOT&voyage=VOYAGE&boisson=5")
+
 <!--verify that : (reset_screen(ROBOT) and False) or get_voyage(ROBOT)==VOYAGE-->
 <html>
     <head>
-        <title>commander une boisson</title>
-        <style>
-            html body{
-                background-color : #color#;
-                max-width : 1000;
-                margin : auto;
-                border-radius : 30px;
-                padding : 20px;
-            }
-        </style>
+        <title>Alcobot commande</title>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link rel="stylesheet" href="commande.css">
+        <meta charset="UTF-8">
     </head>
     <body>
-        <a href="LIEN1">boisson 1</a>
-        <a href="LIEN2">boisson 2</a>
-        <a href="LIEN3">boisson 3</a>
-        <a href="LIEN4">boisson 4</a>
-        <a href="LIEN5">boisson 5</a>
+        <div class="boissons">
+            <button class="btn btn-light" data-boisson='coca' >Coca</button>
+            <button class="btn btn-light" data-boisson='eau'><i class="fas fa-tint"></i> <br>Eau</button>
+            <button class="btn btn-light" data-boisson='jus de pomme'><i class="fas fa-apple-alt"></i> <br>Jus de pomme</button>
+        </div>
+        <button id='send' class="btn btn-primary" disabled>Envoyez la commande</button>
+        <script src="commande.js"></script>
     </body>
 </html>
