--- a/WEB/commande/command.html
+++ b/WEB/commande/command.html
@@ -9,12 +9,14 @@
         <meta charset="UTF-8">
     </head>
     <body>
+        <img class="logo" src ="src/images/logo-horizontal.svg" width="200" height="40" alt = "Logo de la Coupe Robots-JU">
         <div class="boissons">
-            <button class="btn btn-light" data-boisson='coca' >Coca</button>
-            <button class="btn btn-light" data-boisson='eau'><i class="fas fa-tint"></i> <br>Eau</button>
-            <button class="btn btn-light" data-boisson='jus de pomme'><i class="fas fa-apple-alt"></i> <br>Jus de pomme</button>
+            <button class="btn btn-light" data-boisson='coca'> <img src="src/images/cola.png" width="124" height="124"> <br>Coca</button>
+            <button class="btn btn-light" data-boisson='eau'><img src="src/images/drop.png" width="124" height="124"> <br>Eau</button>
+            <button class="btn btn-light" data-boisson='jus de pomme'><img src="src/images/apple.png" width="124" height="124"> <br>Jus de pomme</button>
+            <button class="btn btn-light" data-boisson='limonade citron'><img src="src/images/lemon.png" width="124" height="124"> <br>Limonade citron</button>
         </div>
-        <button id='send' class="btn btn-primary" disabled>Envoyez la commande</button>
+        <button type="button" id='send' class="btn btn-primary" disabled>Envoyez la commande</button>
         <script src="commande.js"></script>
     </body>
 </html>
