--- a/WEB/commande/command.html
+++ b/WEB/commande/command.html
@@ -16,7 +16,7 @@
             <button class="btn btn-light" data-boisson='jus de pomme'><img src="src/images/apple.png" width="124" height="124"> <br>Jus de pomme</button>
             <button class="btn btn-light" data-boisson='limonade citron'><img src="src/images/lemon.png" width="124" height="124"> <br>Limonade citron</button>
         </div>
-        <button type="button" id='send' class="btn btn-primary" disabled>Envoyez la commande</button>
+        <button type="button" id='send' class="btn btn-lg btn-primary" disabled>Envoyez la commande</button>
         <script src="commande.js"></script>
     </body>
 </html>
