ajout de fonctionnalites au seveur web: 	exec : 	set http code : 	add header :

--- a/WEB/commande/index.html
+++ b/WEB/commande/index.html
@@ -1,5 +1,4 @@
-
-<!--verify that : (reset_screen(ROBOT) and False) or get_voyage(ROBOT)==VOYAGE-->
+add header : Content-type ; "text/html"
 <html>
     <head>
         <title>Alcobot commande</title>
