Ajout de la couleur verte au message de confirmation

--- a/WEB/commande/index.html
+++ b/WEB/commande/index.html
@@ -54,12 +54,12 @@ add header : Content-type ; "text/html"
         </div>
         <div class="modal fade" id="confirmation" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                         <div class="modal-dialog" role="document">
-                          <div class="modal-content">
+                          <div class="modal-content bg-success text-white">
                             <div class="modal-header">
                               <h5 class="modal-title">Confirmaion de commande</h5>
                             </div>
                             <div class="modal-body">
-                              <p>Votre commande à bien été envoyé</p><br>
+                              <p>Votre commande à bien été envoyé</p>
                               Votre numéro de commande est le :<br>
                               <div id="numeroCommande"></div>
                             </div>
