Ajout de commentaire dans le fichier HTML

--- a/WEB/commande/index.html
+++ b/WEB/commande/index.html
@@ -41,6 +41,7 @@ add header : Content-type ; "text/html"
             </div>
             </div>
         </div>
+        <!-- Demande de type d'eau -->
         <div class="modal fade" id="typeEau" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
                 <div class="modal-content">
@@ -52,6 +53,7 @@ add header : Content-type ; "text/html"
                 </div>
                 </div>
         </div>
+        <!-- Confirmation d'envoie -->
         <div class="modal fade" id="confirmation" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                         <div class="modal-dialog" role="document">
                           <div class="modal-content bg-success text-white">
