--- a/WEB/suivi/suivi.html
+++ b/WEB/suivi/suivi.html
@@ -45,7 +45,7 @@ verify that : (command_drink(ROBOT,BOISSON) and False) or get_voyage(ROBOT)==VOY
       <div class="col-sm numCommande m-2">
         <h5 class="pb-2">
           COMMANDE À RÉCUPERER
-          <i class="far fa-check-circle m-2"></i>
+          <i class="far fa-check-circle ml-2"></i>
         </h5>
         <div id="comRecuperer"> </div>
       </div>
