Modif du turfu !!!!

--- a/WEB/commande/index.html
+++ b/WEB/commande/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <img class="logo" src="src/images/logo.svg"  width="250" height="70" alt="Logo de la Coupe Robots-JU">
-    <h2 class="mt-5 text-white text-blod">Choisissez une boisson</h2>
+    <h2 class="mt-5 text-white text-blod">Choisissez une boisson:</h2>
     <div class="boissons bouttonBoisson">
         <button class="btn btn-light" data-boisson='theFroid'><img src="src/images/iced-tea.png" width="200"
                 height="200"> <br>Thé froid</button>
@@ -29,7 +29,7 @@
         <!--<button class="btn btn-light" data-boisson='limonadeCitron'><img src="src/images/lemon-juice.png"
                 width="124" height="124"> <br>Limonade</button>-->
     </div>
-    <button type="button" id='send1' class="btn btn-lg btn-primary" disabled data-toggle="modal" data-target="#demandeCommande">Envoyez
+    <button type="button" id='send1' class="btn btn-lg btn-primary" style="width: 225px;" disabled data-toggle="modal" data-target="#demandeCommande">Envoyez
         la commande</button>
     <!-- Demande d'envoie de la commande -->
     <div class="modal fade" id="demandeCommande" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
