Correction d'une faute d'orthographe

--- a/WEB/suivi/suivi.html
+++ b/WEB/suivi/suivi.html
@@ -44,7 +44,7 @@ verify that : (command_drink(ROBOT,BOISSON) and False) or get_voyage(ROBOT)==VOY
       </div>
       <div class="col-sm numCommande m-2">
         <h5 class="pb-2">
-          COMMANDE À RÉCUPERER
+          COMMANDES À RÉCUPERER
           <i class="far fa-check-circle ml-2"></i>
         </h5>
         <div id="comRecuperer"> </div>
