--- a/WEB/commande/index.html
+++ b/WEB/commande/index.html
@@ -86,7 +86,7 @@
     </div>
     <script src="http://localhost:3000/socket.io/socket.io.js"></script>
     <script>
-        var socket = io('http://localhost:3000');
+        var socket = io('http://192.1682.94:3000');
     </script>
     <script src="commande.js"></script>
 
