--- a/WEB/commande/index.html
+++ b/WEB/commande/index.html
@@ -84,7 +84,7 @@
             </div>
         </div>
     </div>
-    <script src="http://localhost:3000/socket.io/socket.io.js"></script>
+    <script src="http://192.168.2.94:3000/socket.io/socket.io.js"></script>
     <script>
         var socket = io('http://192.1682.94:3000');
     </script>
