--- a/WEB/suivi/suivi.html
+++ b/WEB/suivi/suivi.html
@@ -51,9 +51,9 @@ verify that : (command_drink(ROBOT,BOISSON) and False) or get_voyage(ROBOT)==VOY
       </div>
     </div>
   </div>
-  <script src="http://localhost:3000/socket.io/socket.io.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
   <script>
-      var socket = io('http://localhost:3000');
+      var socket = io('http://192.168.2.94:3000');
   </script>
   <script src="suivi.js"></script>
 </body>
