Modification thé froid => limonade

--- a/WEB/commande/index.html
+++ b/WEB/commande/index.html
@@ -20,8 +20,8 @@
     <img class="logo" src="src/images/logo.svg"  width="250" height="70" alt="Logo de la Coupe Robots-JU">
     <h2 class="mt-5 text-white text-blod">Choisissez une boisson :</h2>
     <div class="boissons bouttonBoisson">
-        <button class="btn btn-light" data-boisson='theFroid'><img src="src/images/iced-tea.png" width="200"
-                height="200"> <br>Thé froid</button>
+        <button class="btn btn-light" data-boisson='theFroid'><img src="src/images/orange-juice.png" width="200"
+                height="200"> <br>Limonade</button>
         <button id="eau" class="btn btn-light" data-toggle="modal" data-target="#typeEau"><img src="src/images/eau.png"
                 width="200" height="200"> <br>Eau</button>
         <button class="btn btn-light" data-boisson='coca'> <img src="src/images/soda.png" width="200"
