--- a/WEB/commande/index.html
+++ b/WEB/commande/index.html
@@ -37,7 +37,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLongTitle">Voulez-vous envoyez la commande ?</h5>
+                    <h5 class="modal-title" id="exampleModalLongTitle">Voulez-vous envoyer la commande ?</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     </button>
                 </div>
@@ -74,10 +74,10 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content bg-success text-white">
                 <div class="modal-header">
-                    <h5 class="modal-title">Confirmaion de commande</h5>
+                    <h5 class="modal-title">Confirmation de commande</h5>
                 </div>
                 <div class="modal-body">
-                    <p>Votre commande à bien été envoyé</p>
+                    <p>Votre commande à bien été envoyée</p>
                     Votre numéro de commande est le :<br>
                     <div id="numeroCommande"></div>
                 </div>
